feat(users): create, read, update, and delete users
